--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
+	<script src="js/gyronorm.complete.min.js"></script>
 </head>
 <body>
 	<img class="background"></div>
